<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:id="@+id/iv_habit_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="10dp"
            android:alpha=".1"
            android:contentDescription="@string/img"
            android:src="@drawable/ic_tea" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_big"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_timeElapsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    tools:text="@string/days_ago" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="4dp"
                    android:background="@android:color/black" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/description" />

            <TextView
                android:id="@+id/tv_item_createdTimeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                tools:text="@string/date" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>